--- a/views/index.jade
+++ b/views/index.jade
@@ -27,5 +27,5 @@ block content
         // /USER LIST
     // /WRAPPER
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js")
-  script(src="/javascripts/tagging_images.js")
+ // script(src="/javascripts/tagging_images.js")
 
